--- a/1.2-genetic-algorithm.ipynb
+++ b/1.2-genetic-algorithm.ipynb
@@ -93,9 +93,7 @@
    "cell_type": "code",
    "execution_count": 41,
    "id": "2cd6903d-6edf-4d2c-90b2-1002ea658e49",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -178,7 +176,7 @@
     "def _safe_logP(mol):\n",
     "    try: \n",
     "        score = Descriptors.MolLogP(mol)\n",
-    "    except: # invalid molecule is given for some reason\n",
+    "    except: # invalid molecule\n",
     "        score = -1\n",
     "    return score\n",
     "\n",
