--- a/2.1-PyG-basics.ipynb
+++ b/2.1-PyG-basics.ipynb
@@ -390,9 +390,9 @@
    "source": [
     "# Edge Case\n",
     "\n",
-    "GCN cannot distinguish Decalin and Bicyclopentyl graphs as shown below, i.e., two graph-level features are the same. This is generally true for standard **message passing graph nueral networks (MPNNs)**. It is well known that standard MPNNs are as expressive as the 1-WL test, but it suffices to know for now that there are more powerful architecture designs to remedy the problem.\n",
+    "GCN cannot distinguish Decalin and Bicyclopentyl graphs as shown below, i.e., two graph-level features are the same. This is generally true for standard **message passing graph nueral networks (MPNNs)**. It is well known that standard MPNNs are as expressive as the 1-WL test, that is, 1-WL test cannot distinguish Decalin and Bicyclopentyl graphs as well.\n",
     "\n",
-    "- WL test: https://process-mining.tistory.com/170"
+    "- WL test(Korean): https://process-mining.tistory.com/170"
    ]
   },
   {
@@ -445,6 +445,7 @@
     "\n",
     "_, glob = model(g)\n",
     "\n",
+    "# their cosine similarity equals 1.0.\n",
     "F.cosine_similarity(glob, glob)\n"
    ]
   },
@@ -455,11 +456,11 @@
    "source": [
     "# References\n",
     "\n",
-    "Stanford에서 제공하는 GNN 강좌. 유튜브에서 볼 수 있으며, 실습 파일도 제공한다.\n",
+    "A lecture from Stanford university.\n",
     "\n",
     "- https://web.stanford.edu/class/cs224w/\n",
     "\n",
-    "딥러닝을 이용한 신약 개발에 특화된 파이썬 라이브러리\n",
+    "Libraries for AI drug discovery.\n",
     "\n",
     "- `torchdrug`: https://torchdrug.ai/\n",
     "- `deepchem`: https://deepchem.io/"
