--- a/2.2-scatter-operation.ipynb
+++ b/2.2-scatter-operation.ipynb
@@ -183,7 +183,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([2, 2])"
+       "tensor([3, 3])"
       ]
      },
      "execution_count": 5,
@@ -205,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "tensor([-7.2131, -8.8526], grad_fn=<SqueezeBackward1>)"
+       "tensor([-5.9723, -4.1078], grad_fn=<SqueezeBackward1>)"
       ]
      },
      "execution_count": 6,
@@ -317,16 +317,16 @@
     {
      "data": {
       "text/plain": [
-       "tensor([-0.0689, -0.1980, -6.0036, -5.9040, -5.8830, -5.8410, -5.8542, -5.8430,\n",
-       "        -5.8168, -5.8296, -5.8711, -5.8370, -5.8240, -5.8804, -6.0016, -6.0016,\n",
-       "        -4.7570, -4.6458, -4.6281, -4.6567, -4.6233, -4.6422, -4.6288, -4.5836,\n",
-       "        -4.6288, -4.6422, -4.6184, -6.9102, -6.9102, -6.9934, -7.0262, -6.9934,\n",
-       "        -6.9283, -6.9283, -6.9494, -6.9494, -6.9946, -7.0208, -7.0262, -6.9946,\n",
-       "        -7.0393, -7.0393, -6.9635, -7.0805, -6.9635, -7.0805, -7.0974, -6.9195,\n",
-       "        -7.0974, -6.9840, -7.0824, -6.9840, -7.0208, -7.0824, -6.9045, -6.9045,\n",
-       "        -6.9195, -5.6717, -5.6717, -5.7187, -5.7366, -5.7187, -5.7366, -5.6859,\n",
-       "        -5.6859, -5.6777, -5.6777, -5.6777, -5.6487, -5.6487, -5.7666, -5.7666,\n",
-       "        -5.7666, -5.7329, -5.7666, -5.6487, -5.6777, -5.6487, -5.7329],\n",
+       "tensor([-2.7812, -2.8636, -3.7907, -3.9286, -3.9379, -3.9802, -3.9975, -4.0006,\n",
+       "        -4.0072, -3.9304, -3.9490, -3.9848, -3.9330, -3.9475, -3.7976, -3.7976,\n",
+       "        -3.5355, -3.6587, -3.6289, -3.6437, -3.6923, -3.6548, -3.6645, -3.7142,\n",
+       "        -3.6645, -3.6548, -3.6392, -3.6885, -3.6885, -3.7759, -3.8233, -3.7759,\n",
+       "        -3.8174, -3.8174, -3.8584, -3.8584, -3.8744, -3.8373, -3.8233, -3.8744,\n",
+       "        -3.8898, -3.8898, -3.8590, -3.8570, -3.8590, -3.8570, -3.8422, -3.7204,\n",
+       "        -3.8422, -3.8459, -3.8379, -3.8459, -3.8373, -3.8379, -3.7160, -3.7160,\n",
+       "        -3.7204, -3.4589, -3.4589, -3.5222, -3.5206, -3.5222, -3.5206, -3.5231,\n",
+       "        -3.5231, -3.5156, -3.5156, -3.5156, -3.4954, -3.4954, -3.5286, -3.5286,\n",
+       "        -3.5286, -3.5239, -3.5286, -3.4954, -3.5156, -3.4954, -3.5239],\n",
        "       grad_fn=<SubBackward0>)"
       ]
      },
@@ -374,17 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "65e46328",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([-5.9040, -5.6717], grad_fn=<IndexBackward0>)"
+       "tensor([-3.9286, -3.4589], grad_fn=<IndexBackward0>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "5bbdeb9d",
    "metadata": {},
    "outputs": [
@@ -448,7 +448,7 @@
        "tensor([0, 2])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,20 +476,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6bdbb35",
+   "id": "80142d43-3e8c-43dd-b03d-3e8b8508287f",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
     "# Question\n",
-    "\n",
-    "1. Gumbel-max trick에서 `torch.rand_like(logits)`를 이용했는데, 이는 `torch.rand(len(logits))`에 비해 어떤 장점이 있을까?\n"
+    "    \n",
+    "1. `torch.rand_like(logits)`와 `torch.rand(len(logits))`와의 차이는??"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db204ed6",
+   "id": "b0e5c7ba-469c-43cb-8c12-8d24a986e418",
    "metadata": {},
    "outputs": [],
    "source": []
